--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "**/.sfdx": true
   },
   "workbench.colorCustomizations": {
-    "statusBar.background": "#2f53a8",
-    "activityBar.background": "#2f53a8"
+    "statusBar.background": null,
+    "activityBar.background": null
   }
 }
